tests/test_assets/semantics/arrays/fail/function_argument_size.cog
takes::(values: i32[3]) {
}

takes([1,2]);